# svm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sasm/: CMakeLists.txt
sasm/src/: lexer.cc  lexer.h  main.cc
svm/: CMakeLists.txt
svm/src/: main.cc  stupid-vm.cc  stupid-vm.h  svmmeta.h
